--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,101 +22,99 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# === Step 1: Load and clean data ===\n",
-    "file_path = \"GHA.xlsx\"\n",
-    "sheet_name = \"Headcount - Employee Detail\"\n",
-    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
+    "# Load the input Excel file\n",
+    "df = pd.read_excel(\"GHA.xlsx\", sheet_name=\"Headcount - Employee Detail\")\n",
     "\n",
-    "# Columns to include in final report\n",
-    "cols_to_include = [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
-    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
-    "    \"Legal Entity Name\", \"Work Location City\",\n",
-    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
-    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
+    "# Ensure columns are clean (strip whitespaces)\n",
+    "df.columns = df.columns.str.strip()\n",
+    "\n",
+    "# Filter relevant columns\n",
+    "columns_needed = [\n",
+    "    'Employee ID', 'Employee Name', 'Global Career Band',\n",
+    "    'Entity Manager Employee ID', 'Employee Business Email Address',\n",
+    "    'Employee Type', 'Employee Status', 'Legal Entity Name', 'Work Location City'\n",
     "]\n",
+    "df = df[columns_needed].copy()\n",
     "\n",
-    "# Keep only the necessary columns\n",
-    "df = df[cols_to_include].copy()\n",
+    "# Convert to string to avoid lookup issues\n",
+    "df['Employee ID'] = df['Employee ID'].astype(str)\n",
+    "df['Entity Manager Employee ID'] = df['Entity Manager Employee ID'].astype(str)\n",
     "\n",
-    "# Define grade sorting order\n",
-    "grade_order = {'MD': 0, '3': 1, '4': 2, '5': 3, '6': 4, '7': 5, '8': 6}\n",
-    "df['Grade_Sort'] = df['Global Career Band'].map(grade_order)\n",
-    "df = df.sort_values(by='Grade_Sort').reset_index(drop=True)\n",
+    "# Build a helper function to find ancestors\n",
+    "def get_reporting_line(emp_id):\n",
+    "    row = df[df['Employee ID'] == emp_id]\n",
+    "    if row.empty:\n",
+    "        return None, None, None\n",
     "\n",
-    "# Create employee lookup dictionary\n",
-    "emp_dict = df.set_index(\"Employee ID\").to_dict(\"index\")\n",
+    "    row = row.iloc[0]\n",
+    "    band = row['Global Career Band']\n",
+    "    mgr_id = row['Entity Manager Employee ID']\n",
     "\n",
-    "# Helper to convert Series to dict if needed\n",
-    "def ensure_dict(x):\n",
-    "    return x.to_dict() if hasattr(x, \"to_dict\") else x\n",
+    "    md = gcb3 = mgr = None\n",
     "\n",
-    "# === Step 2: Build hierarchy recursively ===\n",
-    "final_records = []\n",
+    "    while mgr_id and mgr_id != 'nan':\n",
+    "        mgr_row = df[df['Employee ID'] == mgr_id]\n",
+    "        if mgr_row.empty:\n",
+    "            break\n",
+    "        mgr_row = mgr_row.iloc[0]\n",
+    "        mgr_band = mgr_row['Global Career Band']\n",
     "\n",
-    "def build_hierarchy(emp_id, md_info=None, gcb3_info=None, reporting_mgr_info=None):\n",
-    "    emp = emp_dict.get(emp_id)\n",
-    "    if not emp:\n",
-    "        return\n",
+    "        if mgr_band == 'MD' and md is None:\n",
+    "            md = mgr_row\n",
+    "        elif mgr_band == '3' and gcb3 is None:\n",
+    "            gcb3 = mgr_row\n",
+    "        elif mgr_band in ['3', '4'] and mgr is None:\n",
+    "            mgr = mgr_row\n",
     "\n",
-    "    emp_gcb = str(emp.get(\"Global Career Band\", \"\")).strip()\n",
+    "        mgr_id = mgr_row['Entity Manager Employee ID']\n",
     "\n",
-    "    record = {\n",
-    "        # MD info block\n",
-    "        \"MD ID\": md_info[\"Employee ID\"] if md_info else \"\",\n",
-    "        \"MD Name\": md_info[\"Employee Name\"] if md_info else \"\",\n",
-    "        \"MD Email\": md_info[\"Employee Business Email Address\"] if md_info else \"\",\n",
+    "    return md, gcb3, mgr\n",
     "\n",
-    "        # GCB3 info block\n",
-    "        \"GCB3 ID\": gcb3_info[\"Employee ID\"] if gcb3_info else \"\",\n",
-    "        \"GCB3 Name\": gcb3_info[\"Employee Name\"] if gcb3_info else \"\",\n",
-    "        \"GCB3 Email\": gcb3_info[\"Employee Business Email Address\"] if gcb3_info else \"\",\n",
+    "# Final records list\n",
+    "final_rows = []\n",
     "\n",
-    "        # Reporting Manager info block (GCB4 or GCB3-as-Manager)\n",
-    "        \"Reporting Manager ID\": reporting_mgr_info[\"Employee ID\"] if reporting_mgr_info else \"\",\n",
-    "        \"Reporting Manager Name\": reporting_mgr_info[\"Employee Name\"] if reporting_mgr_info else \"\",\n",
-    "        \"Reporting Manager Email\": reporting_mgr_info[\"Employee Business Email Address\"] if reporting_mgr_info else \"\",\n",
-    "    }\n",
+    "# Loop through each employee\n",
+    "for idx, row in df.iterrows():\n",
+    "    band = row['Global Career Band']\n",
+    "    emp_id = row['Employee ID']\n",
     "\n",
-    "    # Add employee's own data\n",
-    "    for col in cols_to_include:\n",
-    "        record[col] = emp.get(col, \"\")\n",
+    "    # Skip MD rows themselves (but include GCB3, GCB4)\n",
+    "    if band == 'MD':\n",
+    "        continue\n",
     "\n",
-    "    final_records.append(record)\n",
+    "    md, gcb3, reporting_mgr = get_reporting_line(emp_id)\n",
     "\n",
-    "    # Now recurse into subordinates\n",
-    "    subordinates = df[df[\"Entity Manager Employee ID\"] == emp_id]\n",
-    "    for _, sub in subordinates.iterrows():\n",
-    "        sub_id = sub[\"Employee ID\"]\n",
-    "        sub_gcb = str(sub[\"Global Career Band\"]).strip()\n",
+    "    final_rows.append({\n",
+    "        # MD Info\n",
+    "        'MD ID': md['Employee ID'] if md is not None else '',\n",
+    "        'MD Name': md['Employee Name'] if md is not None else '',\n",
+    "        'MD Email': md['Employee Business Email Address'] if md is not None else '',\n",
     "\n",
-    "        if sub_gcb == \"3\":\n",
-    "            build_hierarchy(\n",
-    "                sub_id,\n",
-    "                md_info=ensure_dict(md_info) or ensure_dict(emp),\n",
-    "                gcb3_info=ensure_dict(sub)\n",
-    "            )\n",
-    "        else:\n",
-    "            build_hierarchy(\n",
-    "                sub_id,\n",
-    "                md_info=ensure_dict(md_info),\n",
-    "                gcb3_info=ensure_dict(gcb3_info),\n",
-    "                reporting_mgr_info=ensure_dict(emp)\n",
-    "            )\n",
+    "        # GCB3 Info\n",
+    "        'GCB3 ID': gcb3['Employee ID'] if gcb3 is not None else '',\n",
+    "        'GCB3 Name': gcb3['Employee Name'] if gcb3 is not None else '',\n",
+    "        'GCB3 Email': gcb3['Employee Business Email Address'] if gcb3 is not None else '',\n",
     "\n",
-    "# === Step 3: Start building from MDs ===\n",
-    "mds = df[df[\"Global Career Band\"] == \"MD\"]\n",
-    "for _, md in mds.iterrows():\n",
-    "    md_id = md[\"Employee ID\"]\n",
-    "    build_hierarchy(md_id, md_info=md.to_dict())\n",
+    "        # Reporting Manager Info (GCB3/GCB4)\n",
+    "        'Reporting Manager ID': reporting_mgr['Employee ID'] if reporting_mgr is not None else '',\n",
+    "        'Reporting Manager Name': reporting_mgr['Employee Name'] if reporting_mgr is not None else '',\n",
+    "        'Reporting Manager Email': reporting_mgr['Employee Business Email Address'] if reporting_mgr is not None else '',\n",
     "\n",
-    "# === Step 4: Write final output ===\n",
-    "final_df = pd.DataFrame(final_records)\n",
+    "        # Employee Info\n",
+    "        'Employee ID': row['Employee ID'],\n",
+    "        'Employee Name': row['Employee Name'],\n",
+    "        'Employee Email': row['Employee Business Email Address'],\n",
+    "        'Global Career Band': row['Global Career Band'],\n",
+    "        'Employee Type': row['Employee Type'],\n",
+    "        'Employee Status': row['Employee Status'],\n",
+    "        'Legal Entity Name': row['Legal Entity Name'],\n",
+    "        'Work Location City': row['Work Location City'],\n",
+    "    })\n",
     "\n",
-    "# Save to Excel\n",
-    "output_file = \"TaskOne_Hierarchy_Report.xlsx\"\n",
-    "final_df.to_excel(output_file, index=False)\n",
-    "print(f\"Report generated and saved as: {output_file}\")\n"
+    "# Create final DataFrame and save to Excel\n",
+    "output_df = pd.DataFrame(final_rows)\n",
+    "output_df.to_excel(\"Reporting_Hierarchy_Output.xlsx\", index=False)\n",
+    "print(\"Hierarchy output saved as 'Reporting_Hierarchy_Output.xlsx'\")\n"
    ]
   },
   {
