--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,99 +22,81 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the input Excel file\n",
-    "df = pd.read_excel(\"GHA.xlsx\", sheet_name=\"Headcount - Employee Detail\")\n",
+    "# Input details\n",
+    "input_file = 'GHA.xlsx'\n",
+    "sheet_name = 'Headcount - Employee Detail'\n",
     "\n",
-    "# Ensure columns are clean (strip whitespaces)\n",
-    "df.columns = df.columns.str.strip()\n",
+    "# Load data\n",
+    "df = pd.read_excel(input_file, sheet_name=sheet_name)\n",
     "\n",
-    "# Filter relevant columns\n",
-    "columns_needed = [\n",
-    "    'Employee ID', 'Employee Name', 'Global Career Band',\n",
-    "    'Entity Manager Employee ID', 'Employee Business Email Address',\n",
-    "    'Employee Type', 'Employee Status', 'Legal Entity Name', 'Work Location City'\n",
-    "]\n",
-    "df = df[columns_needed].copy()\n",
-    "\n",
-    "# Convert to string to avoid lookup issues\n",
+    "# Ensure proper types\n",
     "df['Employee ID'] = df['Employee ID'].astype(str)\n",
     "df['Entity Manager Employee ID'] = df['Entity Manager Employee ID'].astype(str)\n",
+    "df['Global Career Band'] = df['Global Career Band'].astype(str)\n",
     "\n",
-    "# Build a helper function to find ancestors\n",
-    "def get_reporting_line(emp_id):\n",
-    "    row = df[df['Employee ID'] == emp_id]\n",
-    "    if row.empty:\n",
-    "        return None, None, None\n",
+    "# Function to trace reporting chain\n",
+    "def trace_hierarchy(emp_id):\n",
+    "    visited = set()\n",
+    "    md_info = gcb3_info = rep_mgr_info = None\n",
+    "    current_id = emp_id\n",
     "\n",
-    "    row = row.iloc[0]\n",
-    "    band = row['Global Career Band']\n",
-    "    mgr_id = row['Entity Manager Employee ID']\n",
-    "\n",
-    "    md = gcb3 = mgr = None\n",
-    "\n",
-    "    while mgr_id and mgr_id != 'nan':\n",
-    "        mgr_row = df[df['Employee ID'] == mgr_id]\n",
-    "        if mgr_row.empty:\n",
+    "    while True:\n",
+    "        row = df[df['Employee ID'] == current_id]\n",
+    "        if row.empty or current_id in visited:\n",
     "            break\n",
-    "        mgr_row = mgr_row.iloc[0]\n",
-    "        mgr_band = mgr_row['Global Career Band']\n",
     "\n",
-    "        if mgr_band == 'MD' and md is None:\n",
-    "            md = mgr_row\n",
-    "        elif mgr_band == '3' and gcb3 is None:\n",
-    "            gcb3 = mgr_row\n",
-    "        elif mgr_band in ['3', '4'] and mgr is None:\n",
-    "            mgr = mgr_row\n",
+    "        visited.add(current_id)\n",
+    "        row = row.iloc[0]\n",
+    "        mgr_id = row['Entity Manager Employee ID']\n",
+    "        gcb = row['Global Career Band']\n",
     "\n",
-    "        mgr_id = mgr_row['Entity Manager Employee ID']\n",
+    "        # Assign roles based on GCB\n",
+    "        if gcb == 'MD' and md_info is None:\n",
+    "            md_info = row\n",
+    "        elif gcb == '3' and gcb3_info is None:\n",
+    "            gcb3_info = row\n",
+    "        elif rep_mgr_info is None:\n",
+    "            rep_mgr_info = row\n",
     "\n",
-    "    return md, gcb3, mgr\n",
+    "        current_id = mgr_id\n",
     "\n",
-    "# Final records list\n",
-    "final_rows = []\n",
+    "    return md_info, gcb3_info, rep_mgr_info\n",
     "\n",
-    "# Loop through each employee\n",
-    "for idx, row in df.iterrows():\n",
-    "    band = row['Global Career Band']\n",
-    "    emp_id = row['Employee ID']\n",
+    "# Prepare rows\n",
+    "records = []\n",
+    "for _, emp in df.iterrows():\n",
+    "    emp_id = emp['Employee ID']\n",
+    "    md, gcb3, rep_mgr = trace_hierarchy(emp['Entity Manager Employee ID'])\n",
     "\n",
-    "    # Skip MD rows themselves (but include GCB3, GCB4)\n",
-    "    if band == 'MD':\n",
-    "        continue\n",
+    "    records.append({\n",
+    "        # MD details\n",
+    "        \"MD Employee ID\": md['Employee ID'] if md is not None else \"\",\n",
+    "        \"MD Name\": md['Employee Name'] if md is not None else \"\",\n",
+    "        \"MD Email\": md['Employee Business Email Address'] if md is not None else \"\",\n",
     "\n",
-    "    md, gcb3, reporting_mgr = get_reporting_line(emp_id)\n",
+    "        # GCB3 details\n",
+    "        \"GCB3 Employee ID\": gcb3['Employee ID'] if gcb3 is not None else \"\",\n",
+    "        \"GCB3 Name\": gcb3['Employee Name'] if gcb3 is not None else \"\",\n",
+    "        \"GCB3 Email\": gcb3['Employee Business Email Address'] if gcb3 is not None else \"\",\n",
     "\n",
-    "    final_rows.append({\n",
-    "        # MD Info\n",
-    "        'MD ID': md['Employee ID'] if md is not None else '',\n",
-    "        'MD Name': md['Employee Name'] if md is not None else '',\n",
-    "        'MD Email': md['Employee Business Email Address'] if md is not None else '',\n",
+    "        # Reporting Manager (GCB3 or GCB4)\n",
+    "        \"Reporting Manager ID\": rep_mgr['Employee ID'] if rep_mgr is not None else \"\",\n",
+    "        \"Reporting Manager Name\": rep_mgr['Employee Name'] if rep_mgr is not None else \"\",\n",
+    "        \"Reporting Manager Email\": rep_mgr['Employee Business Email Address'] if rep_mgr is not None else \"\",\n",
     "\n",
-    "        # GCB3 Info\n",
-    "        'GCB3 ID': gcb3['Employee ID'] if gcb3 is not None else '',\n",
-    "        'GCB3 Name': gcb3['Employee Name'] if gcb3 is not None else '',\n",
-    "        'GCB3 Email': gcb3['Employee Business Email Address'] if gcb3 is not None else '',\n",
-    "\n",
-    "        # Reporting Manager Info (GCB3/GCB4)\n",
-    "        'Reporting Manager ID': reporting_mgr['Employee ID'] if reporting_mgr is not None else '',\n",
-    "        'Reporting Manager Name': reporting_mgr['Employee Name'] if reporting_mgr is not None else '',\n",
-    "        'Reporting Manager Email': reporting_mgr['Employee Business Email Address'] if reporting_mgr is not None else '',\n",
-    "\n",
-    "        # Employee Info\n",
-    "        'Employee ID': row['Employee ID'],\n",
-    "        'Employee Name': row['Employee Name'],\n",
-    "        'Employee Email': row['Employee Business Email Address'],\n",
-    "        'Global Career Band': row['Global Career Band'],\n",
-    "        'Employee Type': row['Employee Type'],\n",
-    "        'Employee Status': row['Employee Status'],\n",
-    "        'Legal Entity Name': row['Legal Entity Name'],\n",
-    "        'Work Location City': row['Work Location City'],\n",
+    "        # Actual employee details\n",
+    "        \"Employee ID\": emp['Employee ID'],\n",
+    "        \"Employee Name\": emp['Employee Name'],\n",
+    "        \"Employee Email\": emp['Employee Business Email Address'],\n",
+    "        \"Employee GCB\": emp['Global Career Band'],\n",
     "    })\n",
     "\n",
-    "# Create final DataFrame and save to Excel\n",
-    "output_df = pd.DataFrame(final_rows)\n",
-    "output_df.to_excel(\"Reporting_Hierarchy_Output.xlsx\", index=False)\n",
-    "print(\"Hierarchy output saved as 'Reporting_Hierarchy_Output.xlsx'\")\n"
+    "# Final DataFrame\n",
+    "output_df = pd.DataFrame(records)\n",
+    "\n",
+    "# Save to Excel\n",
+    "output_df.to_excel(\"GHA_Hierarchy_Output.xlsx\", index=False)\n",
+    "print(\"Hierarchy file saved as 'GHA_Hierarchy_Output.xlsx'\")\n"
    ]
   },
   {
