--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,81 +22,117 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Input details\n",
-    "input_file = 'GHA.xlsx'\n",
-    "sheet_name = 'Headcount - Employee Detail'\n",
+    "# Input parameters\n",
+    "INPUT_FILE = \"GHA.xlsx\"\n",
+    "INPUT_SHEET = \"Headcount - Employee Detail\"\n",
+    "OUTPUT_FILE = \"Hierarchy_Output.xlsx\"\n",
     "\n",
     "# Load data\n",
-    "df = pd.read_excel(input_file, sheet_name=sheet_name)\n",
+    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET)\n",
     "\n",
-    "# Ensure proper types\n",
-    "df['Employee ID'] = df['Employee ID'].astype(str)\n",
-    "df['Entity Manager Employee ID'] = df['Entity Manager Employee ID'].astype(str)\n",
-    "df['Global Career Band'] = df['Global Career Band'].astype(str)\n",
+    "# Standardize column names\n",
+    "for col in ['Employee ID', 'Employee Name', 'Email ID', 'Reporting Manager ID', 'Reporting Manager Name', 'Global Career Band']:\n",
+    "    if col not in df.columns:\n",
+    "        raise Exception(f\"Missing column: {col}\")\n",
     "\n",
-    "# Function to trace reporting chain\n",
-    "def trace_hierarchy(emp_id):\n",
-    "    visited = set()\n",
-    "    md_info = gcb3_info = rep_mgr_info = None\n",
-    "    current_id = emp_id\n",
+    "# Define grade levels\n",
+    "MD_GRADE = 'MD'\n",
+    "GCB3_GRADE = '3'\n",
     "\n",
-    "    while True:\n",
-    "        row = df[df['Employee ID'] == current_id]\n",
-    "        if row.empty or current_id in visited:\n",
-    "            break\n",
+    "# Create lookup for employee info\n",
+    "employee_info = df.set_index('Employee ID')\n",
     "\n",
-    "        visited.add(current_id)\n",
-    "        row = row.iloc[0]\n",
-    "        mgr_id = row['Entity Manager Employee ID']\n",
-    "        gcb = row['Global Career Band']\n",
+    "# Track matched and unmatched employees\n",
+    "output_rows = []\n",
+    "unmatched_rows = []\n",
     "\n",
-    "        # Assign roles based on GCB\n",
-    "        if gcb == 'MD' and md_info is None:\n",
-    "            md_info = row\n",
-    "        elif gcb == '3' and gcb3_info is None:\n",
-    "            gcb3_info = row\n",
-    "        elif rep_mgr_info is None:\n",
-    "            rep_mgr_info = row\n",
+    "# Helper function to get employee row by ID\n",
+    "def get_employee(emp_id):\n",
+    "    try:\n",
+    "        return employee_info.loc[emp_id]\n",
+    "    except KeyError:\n",
+    "        return None\n",
     "\n",
-    "        current_id = mgr_id\n",
+    "# Filter MDs\n",
+    "mds = df[df['Global Career Band'] == MD_GRADE].sort_values('Employee Name')\n",
     "\n",
-    "    return md_info, gcb3_info, rep_mgr_info\n",
+    "for _, md in mds.iterrows():\n",
+    "    md_id = md['Employee ID']\n",
+    "    md_name = md['Employee Name']\n",
+    "    md_email = md['Email ID']\n",
     "\n",
-    "# Prepare rows\n",
-    "records = []\n",
-    "for _, emp in df.iterrows():\n",
-    "    emp_id = emp['Employee ID']\n",
-    "    md, gcb3, rep_mgr = trace_hierarchy(emp['Entity Manager Employee ID'])\n",
+    "    # GCB3s reporting to this MD\n",
+    "    gcb3s = df[(df['Reporting Manager ID'] == md_id) & (df['Global Career Band'] == GCB3_GRADE)]\n",
     "\n",
-    "    records.append({\n",
-    "        # MD details\n",
-    "        \"MD Employee ID\": md['Employee ID'] if md is not None else \"\",\n",
-    "        \"MD Name\": md['Employee Name'] if md is not None else \"\",\n",
-    "        \"MD Email\": md['Employee Business Email Address'] if md is not None else \"\",\n",
+    "    if gcb3s.empty:\n",
+    "        # Employees directly under MD\n",
+    "        direct_emps = df[df['Reporting Manager ID'] == md_id]\n",
+    "        for _, emp in direct_emps.iterrows():\n",
+    "            output_rows.append({\n",
+    "                \"MD ID\": md_id,\n",
+    "                \"MD Name\": md_name,\n",
+    "                \"MD Email\": md_email,\n",
+    "                \"GCB3 ID\": \"\",\n",
+    "                \"GCB3 Name\": \"\",\n",
+    "                \"GCB3 Email\": \"\",\n",
+    "                \"Reporting Manager ID\": \"\",\n",
+    "                \"Reporting Manager Name\": \"\",\n",
+    "                \"Employee ID\": emp['Employee ID'],\n",
+    "                \"Employee Name\": emp['Employee Name'],\n",
+    "                \"Employee Email\": emp['Email ID'],\n",
+    "                \"Employee GCB\": emp['Global Career Band']\n",
+    "            })\n",
+    "        continue\n",
     "\n",
-    "        # GCB3 details\n",
-    "        \"GCB3 Employee ID\": gcb3['Employee ID'] if gcb3 is not None else \"\",\n",
-    "        \"GCB3 Name\": gcb3['Employee Name'] if gcb3 is not None else \"\",\n",
-    "        \"GCB3 Email\": gcb3['Employee Business Email Address'] if gcb3 is not None else \"\",\n",
+    "    for _, gcb3 in gcb3s.iterrows():\n",
+    "        gcb3_id = gcb3['Employee ID']\n",
+    "        gcb3_name = gcb3['Employee Name']\n",
+    "        gcb3_email = gcb3['Email ID']\n",
     "\n",
-    "        # Reporting Manager (GCB3 or GCB4)\n",
-    "        \"Reporting Manager ID\": rep_mgr['Employee ID'] if rep_mgr is not None else \"\",\n",
-    "        \"Reporting Manager Name\": rep_mgr['Employee Name'] if rep_mgr is not None else \"\",\n",
-    "        \"Reporting Manager Email\": rep_mgr['Employee Business Email Address'] if rep_mgr is not None else \"\",\n",
+    "        # Add GCB3's own row as employee under MD\n",
+    "        output_rows.append({\n",
+    "            \"MD ID\": md_id,\n",
+    "            \"MD Name\": md_name,\n",
+    "            \"MD Email\": md_email,\n",
+    "            \"GCB3 ID\": gcb3_id,\n",
+    "            \"GCB3 Name\": gcb3_name,\n",
+    "            \"GCB3 Email\": gcb3_email,\n",
+    "            \"Reporting Manager ID\": \"\",\n",
+    "            \"Reporting Manager Name\": \"\",\n",
+    "            \"Employee ID\": gcb3_id,\n",
+    "            \"Employee Name\": gcb3_name,\n",
+    "            \"Employee Email\": gcb3_email,\n",
+    "            \"Employee GCB\": gcb3['Global Career Band']\n",
+    "        })\n",
     "\n",
-    "        # Actual employee details\n",
-    "        \"Employee ID\": emp['Employee ID'],\n",
-    "        \"Employee Name\": emp['Employee Name'],\n",
-    "        \"Employee Email\": emp['Employee Business Email Address'],\n",
-    "        \"Employee GCB\": emp['Global Career Band'],\n",
-    "    })\n",
+    "        # Employees reporting to this GCB3\n",
+    "        reps = df[df['Reporting Manager ID'] == gcb3_id]\n",
+    "        for _, rep in reps.iterrows():\n",
+    "            output_rows.append({\n",
+    "                \"MD ID\": md_id,\n",
+    "                \"MD Name\": md_name,\n",
+    "                \"MD Email\": md_email,\n",
+    "                \"GCB3 ID\": gcb3_id,\n",
+    "                \"GCB3 Name\": gcb3_name,\n",
+    "                \"GCB3 Email\": gcb3_email,\n",
+    "                \"Reporting Manager ID\": rep['Reporting Manager ID'],\n",
+    "                \"Reporting Manager Name\": rep['Reporting Manager Name'],\n",
+    "                \"Employee ID\": rep['Employee ID'],\n",
+    "                \"Employee Name\": rep['Employee Name'],\n",
+    "                \"Employee Email\": rep['Email ID'],\n",
+    "                \"Employee GCB\": rep['Global Career Band']\n",
+    "            })\n",
     "\n",
-    "# Final DataFrame\n",
-    "output_df = pd.DataFrame(records)\n",
+    "# Remaining employees not captured (whose managers are missing)\n",
+    "captured_ids = set(row['Employee ID'] for row in output_rows)\n",
+    "remaining = df[~df['Employee ID'].isin(captured_ids)]\n",
     "\n",
-    "# Save to Excel\n",
-    "output_df.to_excel(\"GHA_Hierarchy_Output.xlsx\", index=False)\n",
-    "print(\"Hierarchy file saved as 'GHA_Hierarchy_Output.xlsx'\")\n"
+    "unmatched_rows = remaining.copy()\n",
+    "\n",
+    "# Write to Excel\n",
+    "with pd.ExcelWriter(OUTPUT_FILE, engine=\"xlsxwriter\") as writer:\n",
+    "    pd.DataFrame(output_rows).to_excel(writer, sheet_name=\"Hierarchy Report\", index=False)\n",
+    "    unmatched_rows.to_excel(writer, sheet_name=\"Unmatched Records\", index=False)\n"
    ]
   },
   {
