--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,117 +22,141 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Input parameters\n",
-    "INPUT_FILE = \"GHA.xlsx\"\n",
-    "INPUT_SHEET = \"Headcount - Employee Detail\"\n",
-    "OUTPUT_FILE = \"Hierarchy_Output.xlsx\"\n",
+    "# Load input file\n",
+    "file_path = \"GHA.xlsx\"\n",
+    "sheet_name = \"Headcount - Employee Detail\"\n",
+    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
     "\n",
-    "# Load data\n",
-    "df = pd.read_excel(INPUT_FILE, sheet_name=INPUT_SHEET)\n",
+    "# Fix email column and standardize\n",
+    "EMAIL_COL = \"Employee Business Email Address\"\n",
+    "ID_COL = \"Employee ID\"\n",
+    "MGR_ID_COL = \"Manager Employee ID\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "NAME_COL = \"Employee Name\"\n",
     "\n",
-    "# Standardize column names\n",
-    "for col in ['Employee ID', 'Employee Name', 'Email ID', 'Reporting Manager ID', 'Reporting Manager Name', 'Global Career Band']:\n",
-    "    if col not in df.columns:\n",
-    "        raise Exception(f\"Missing column: {col}\")\n",
+    "# Ensure critical columns exist\n",
+    "required_cols = [ID_COL, MGR_ID_COL, GCB_COL, NAME_COL, EMAIL_COL]\n",
+    "missing_cols = [col for col in required_cols if col not in df.columns]\n",
+    "if missing_cols:\n",
+    "    raise ValueError(f\"Missing columns in source data: {missing_cols}\")\n",
     "\n",
-    "# Define grade levels\n",
-    "MD_GRADE = 'MD'\n",
-    "GCB3_GRADE = '3'\n",
+    "# Create a lookup table for employees by ID\n",
+    "df_lookup = df.set_index(ID_COL)\n",
     "\n",
-    "# Create lookup for employee info\n",
-    "employee_info = df.set_index('Employee ID')\n",
+    "# Final output rows and exception list\n",
+    "final_rows = []\n",
+    "exceptions = []\n",
     "\n",
-    "# Track matched and unmatched employees\n",
-    "output_rows = []\n",
-    "unmatched_rows = []\n",
-    "\n",
-    "# Helper function to get employee row by ID\n",
-    "def get_employee(emp_id):\n",
+    "# Function to safely fetch employee row\n",
+    "def get_emp(emp_id):\n",
     "    try:\n",
-    "        return employee_info.loc[emp_id]\n",
+    "        return df_lookup.loc[emp_id]\n",
     "    except KeyError:\n",
     "        return None\n",
     "\n",
-    "# Filter MDs\n",
-    "mds = df[df['Global Career Band'] == MD_GRADE].sort_values('Employee Name')\n",
+    "# Find all MDs\n",
+    "mds = df[df[GCB_COL] == 'MD']\n",
     "\n",
+    "# Process each MD\n",
     "for _, md in mds.iterrows():\n",
-    "    md_id = md['Employee ID']\n",
-    "    md_name = md['Employee Name']\n",
-    "    md_email = md['Email ID']\n",
-    "\n",
-    "    # GCB3s reporting to this MD\n",
-    "    gcb3s = df[(df['Reporting Manager ID'] == md_id) & (df['Global Career Band'] == GCB3_GRADE)]\n",
-    "\n",
+    "    md_id = md[ID_COL]\n",
+    "    \n",
+    "    # Find GCB3s reporting to MD\n",
+    "    gcb3s = df[(df[MGR_ID_COL] == md_id) & (df[GCB_COL] == 3)]\n",
+    "    \n",
     "    if gcb3s.empty:\n",
-    "        # Employees directly under MD\n",
-    "        direct_emps = df[df['Reporting Manager ID'] == md_id]\n",
+    "        # No GCB3s, check who directly reports to MD\n",
+    "        direct_emps = df[(df[MGR_ID_COL] == md_id) & (df[GCB_COL] != 3)]\n",
     "        for _, emp in direct_emps.iterrows():\n",
-    "            output_rows.append({\n",
-    "                \"MD ID\": md_id,\n",
-    "                \"MD Name\": md_name,\n",
-    "                \"MD Email\": md_email,\n",
-    "                \"GCB3 ID\": \"\",\n",
+    "            final_rows.append({\n",
+    "                \"MD Name\": md[NAME_COL],\n",
+    "                \"MD ID\": md[ID_COL],\n",
+    "                \"MD Email\": md[EMAIL_COL],\n",
     "                \"GCB3 Name\": \"\",\n",
+    "                \"GCB3 ID\": \"\",\n",
     "                \"GCB3 Email\": \"\",\n",
-    "                \"Reporting Manager ID\": \"\",\n",
     "                \"Reporting Manager Name\": \"\",\n",
-    "                \"Employee ID\": emp['Employee ID'],\n",
-    "                \"Employee Name\": emp['Employee Name'],\n",
-    "                \"Employee Email\": emp['Email ID'],\n",
-    "                \"Employee GCB\": emp['Global Career Band']\n",
+    "                \"Reporting Manager ID\": \"\",\n",
+    "                \"Reporting Manager Email\": \"\",\n",
+    "                **emp.to_dict()\n",
     "            })\n",
     "        continue\n",
     "\n",
     "    for _, gcb3 in gcb3s.iterrows():\n",
-    "        gcb3_id = gcb3['Employee ID']\n",
-    "        gcb3_name = gcb3['Employee Name']\n",
-    "        gcb3_email = gcb3['Email ID']\n",
+    "        gcb3_id = gcb3[ID_COL]\n",
     "\n",
-    "        # Add GCB3's own row as employee under MD\n",
-    "        output_rows.append({\n",
-    "            \"MD ID\": md_id,\n",
-    "            \"MD Name\": md_name,\n",
-    "            \"MD Email\": md_email,\n",
-    "            \"GCB3 ID\": gcb3_id,\n",
-    "            \"GCB3 Name\": gcb3_name,\n",
-    "            \"GCB3 Email\": gcb3_email,\n",
-    "            \"Reporting Manager ID\": \"\",\n",
+    "        # First: GCB3’s own row\n",
+    "        final_rows.append({\n",
+    "            \"MD Name\": md[NAME_COL],\n",
+    "            \"MD ID\": md[ID_COL],\n",
+    "            \"MD Email\": md[EMAIL_COL],\n",
+    "            \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "            \"GCB3 ID\": gcb3[ID_COL],\n",
+    "            \"GCB3 Email\": gcb3[EMAIL_COL],\n",
     "            \"Reporting Manager Name\": \"\",\n",
-    "            \"Employee ID\": gcb3_id,\n",
-    "            \"Employee Name\": gcb3_name,\n",
-    "            \"Employee Email\": gcb3_email,\n",
-    "            \"Employee GCB\": gcb3['Global Career Band']\n",
+    "            \"Reporting Manager ID\": \"\",\n",
+    "            \"Reporting Manager Email\": \"\",\n",
+    "            **gcb3.to_dict()\n",
     "        })\n",
     "\n",
-    "        # Employees reporting to this GCB3\n",
-    "        reps = df[df['Reporting Manager ID'] == gcb3_id]\n",
-    "        for _, rep in reps.iterrows():\n",
-    "            output_rows.append({\n",
-    "                \"MD ID\": md_id,\n",
-    "                \"MD Name\": md_name,\n",
-    "                \"MD Email\": md_email,\n",
-    "                \"GCB3 ID\": gcb3_id,\n",
-    "                \"GCB3 Name\": gcb3_name,\n",
-    "                \"GCB3 Email\": gcb3_email,\n",
-    "                \"Reporting Manager ID\": rep['Reporting Manager ID'],\n",
-    "                \"Reporting Manager Name\": rep['Reporting Manager Name'],\n",
-    "                \"Employee ID\": rep['Employee ID'],\n",
-    "                \"Employee Name\": rep['Employee Name'],\n",
-    "                \"Employee Email\": rep['Email ID'],\n",
-    "                \"Employee GCB\": rep['Global Career Band']\n",
+    "        # Second: Employees (GCB3s or GCB4s) who report to this GCB3\n",
+    "        rm_level = df[df[MGR_ID_COL] == gcb3_id]\n",
+    "\n",
+    "        for _, rm in rm_level.iterrows():\n",
+    "            rm_id = rm[ID_COL]\n",
+    "            rm_gcb = rm[GCB_COL]\n",
+    "\n",
+    "            # Row for this Reporting Manager (GCB3 or GCB4)\n",
+    "            final_rows.append({\n",
+    "                \"MD Name\": md[NAME_COL],\n",
+    "                \"MD ID\": md[ID_COL],\n",
+    "                \"MD Email\": md[EMAIL_COL],\n",
+    "                \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "                \"GCB3 ID\": gcb3[ID_COL],\n",
+    "                \"GCB3 Email\": gcb3[EMAIL_COL],\n",
+    "                \"Reporting Manager Name\": rm[NAME_COL],\n",
+    "                \"Reporting Manager ID\": rm[ID_COL],\n",
+    "                \"Reporting Manager Email\": rm[EMAIL_COL],\n",
+    "                **rm.to_dict()\n",
     "            })\n",
     "\n",
-    "# Remaining employees not captured (whose managers are missing)\n",
-    "captured_ids = set(row['Employee ID'] for row in output_rows)\n",
-    "remaining = df[~df['Employee ID'].isin(captured_ids)]\n",
+    "            # Now list the direct reports to this RM\n",
+    "            emps = df[df[MGR_ID_COL] == rm_id]\n",
+    "            for _, emp in emps.iterrows():\n",
+    "                final_rows.append({\n",
+    "                    \"MD Name\": md[NAME_COL],\n",
+    "                    \"MD ID\": md[ID_COL],\n",
+    "                    \"MD Email\": md[EMAIL_COL],\n",
+    "                    \"GCB3 Name\": gcb3[NAME_COL],\n",
+    "                    \"GCB3 ID\": gcb3[ID_COL],\n",
+    "                    \"GCB3 Email\": gcb3[EMAIL_COL],\n",
+    "                    \"Reporting Manager Name\": rm[NAME_COL],\n",
+    "                    \"Reporting Manager ID\": rm[ID_COL],\n",
+    "                    \"Reporting Manager Email\": rm[EMAIL_COL],\n",
+    "                    **emp.to_dict()\n",
+    "                })\n",
     "\n",
-    "unmatched_rows = remaining.copy()\n",
+    "# Now find employees whose manager is missing\n",
+    "all_emp_ids = set(df[ID_COL])\n",
+    "all_mgr_ids = set(df[MGR_ID_COL])\n",
+    "missing_mgr_ids = all_mgr_ids - all_emp_ids\n",
+    "\n",
+    "for emp in df[df[MGR_ID_COL].isin(missing_mgr_ids)].itertuples(index=False):\n",
+    "    exceptions.append(emp._asdict())\n",
+    "\n",
+    "# Convert final output to DataFrame\n",
+    "final_df = pd.DataFrame(final_rows)\n",
+    "exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "# Sort by MD Name\n",
+    "final_df.sort_values(\"MD Name\", inplace=True)\n",
     "\n",
     "# Write to Excel\n",
-    "with pd.ExcelWriter(OUTPUT_FILE, engine=\"xlsxwriter\") as writer:\n",
-    "    pd.DataFrame(output_rows).to_excel(writer, sheet_name=\"Hierarchy Report\", index=False)\n",
-    "    unmatched_rows.to_excel(writer, sheet_name=\"Unmatched Records\", index=False)\n"
+    "with pd.ExcelWriter(\"Task_One_Hierarchy_Report.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "    exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "print(\"Hierarchy report generated: Task_One_Hierarchy_Report.xlsx\")\n"
    ]
   },
   {
