--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -156,7 +156,18 @@
     "    final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
     "    exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
     "\n",
-    "print(\"Hierarchy report generated: Task_One_Hierarchy_Report.xlsx\")\n"
+    "print(\"Hierarchy report generated: Task_One_Hierarchy_Report.xlsx\")\n",
+    "\n",
+    "\n",
+    "# Get only non-MD employees whose managers are missing\n",
+    "missing_mgr_emps = df[df[MGR_ID_COL].isin(missing_mgr_ids) & (df[GCB_COL] != \"MD\")]\n",
+    "\n",
+    "# Keep only the most useful columns for exceptions sheet\n",
+    "exception_cols = [\"Employee ID\", \"Employee Name\", \"Employee Business Email Address\", \n",
+    "                  \"Manager Employee ID\", \"Global Career Band\", \"Department\", \"Company\", \"Job Function\"]\n",
+    "\n",
+    "exceptions_df = missing_mgr_emps[exception_cols].copy()\n",
+    "\n"
    ]
   },
   {
